--- a/data/rewards_log.yml
+++ b/data/rewards_log.yml
@@ -3,12 +3,12 @@
 # origin: [alipay, bitcoin, paypal, wechatpay, ...]
 
 message: Thanks all!
-currency: CNY
-symbol: ¥
+currency: THB
+symbol: ฿
 # The sponsor logs inherit the FixIt Timeline events
 logs:
   - date: "2006-01-02 15:04:05"
-    sponsor: Cell
+    sponsor: attajak
     money: 50
-    origin: alipay
+    origin: paypal
     remark: "Come on!"
