--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -4,6 +4,9 @@
 # -------------------------------------------------------------------------------------
 
 [[imports]]
+  path = "github.com/hugo-fixit/FixIt"
+
+[[imports]]
   path = "github.com/hugo-fixit/fixit-bundle"
 
 [hugoVersion]
