--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "create": "hugo new",
     "build": "HUGO_ENVIRONMENT=production hugo --gc --minify --logLevel info",
     "preupdate": "git submodule update --init --recursive",
-    "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0",
+    "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
     "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
-    "update": "git submodule update --remote --merge && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
+    "update": "git submodule update --remote --merge && hugo mod get -u github.com/hugo-fixit/FixIt@main && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
     "postupdate": "git add .gitmodules go.mod go.sum && git commit -m ':arrow_up: Chore(FixIt): Update fixit-bundle version' && git push origin main"
   },
   "repository": {
