--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Update hugo modules
         run: |
+          hugo mod get -u github.com/hugo-fixit/FixIt@main
           hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
           hugo mod tidy
           hugo mod graph
