--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "description": "This is a quick start template for Hugo theme [FixIt](https://github.com/hugo-fixit/FixIt). It uses [Hugo modules](https://gohugo.io/hugo-modules/) feature to load the theme.",
   "main": "index.js",
   "scripts": {
-    "create": "hugo new",
-    "build": "HUGO_ENVIRONMENT=production hugo --gc --minify --logLevel info",
-    "preupdate": "git submodule update --init --recursive",
+    "create": "hugo new content",
+    "clean": "hugo mod clean && rm -rf .hugo_build.log resource public _vendor",
+    "build": "hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
-    "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
-    "update": "git submodule update --remote --merge && hugo mod get -u github.com/hugo-fixit/FixIt@main && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
+    "server:production": "npm run server -- --environment production",
+    "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
+    "update": "hugo mod get -u github.com/hugo-fixit/FixIt@main && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
     "postupdate": "git add .gitmodules go.mod go.sum && git commit -m ':arrow_up: Chore(FixIt): Update fixit-bundle version' && git push origin main"
   },
   "repository": {
