--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "create": "hugo new content",
     "clean": "hugo mod clean && rm -rf .hugo_build.log resource public _vendor",
-    "build": "hugo --gc --minify --logLevel info",
+    "build": "HUGO_ENVIRONMENT=production hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
-    "server:production": "npm run server -- --environment production",
+    "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
     "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
     "update": "hugo mod get -u github.com/hugo-fixit/FixIt@main && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
     "postupdate": "git add .gitmodules go.mod go.sum && git commit -m ':arrow_up: Chore(FixIt): Update fixit-bundle version' && git push origin main"
