--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
     "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
     "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
-    "update": "hugo mod get -u github.com/hugo-fixit/FixIt@main && hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph",
-    "postupdate": "git add .gitmodules go.mod go.sum && git commit -m ':arrow_up: Chore(FixIt): Update fixit-bundle version' && git push origin main"
+    "update": "hugo mod get -u ./... && hugo mod tidy && hugo mod graph",
+    "postupdate": "git add go.mod go.sum .gitmodules && git commit -m ':arrow_up: Chore(Modules): Update modules version' && git push origin main"
   },
   "repository": {
     "type": "git",
