Use FixIt-bundle

--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Update hugo modules
         run: |
-          hugo mod get -u ./...
+          hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
           hugo mod tidy
           hugo mod graph
 
@@ -43,7 +43,7 @@ jobs:
         with:
           comment_tag_name: HUGO_FIXIT_COMPONENTS
           readme_path: 'README.md' # 'README.md,README.en.md'
-          # exclude_repos: 'fixit-bundle'
+          exclude_repos: 'fixit-bundle'
           template: "- [{$repo.name}]({$repo.html_url})\\\n {$repo.description}"
 
       - name: Commit changes
