--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "create": "hugo new content",
     "clean": "hugo mod clean && rm -rf .hugo_build.log resource public _vendor",
     "build": "HUGO_ENVIRONMENT=production hugo --gc --minify --logLevel info",
-    "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
+    "server": "hugo server -D -E -F -N -M -O --gc --minify --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
     "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
     "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
     "update": "hugo mod get -u ./... && hugo mod tidy && hugo mod graph",
