--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "create": "hugo new content",
     "clean": "hugo mod clean && rm -rf .hugo_build.log resource public _vendor",
-    "build": "HUGO_ENVIRONMENT=production hugo --gc --minify --logLevel info",
+    "build": "hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --gc --minify --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost:1313/",
-    "server:production": "HUGO_ENVIRONMENT=production npm run server -- --environment production",
+    "server:production": "npm run server -- --environment production",
     "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
-    "update": "hugo mod get -u ./... && hugo mod tidy && hugo mod graph",
-    "postupdate": "git add go.mod go.sum .gitmodules && git commit -m ':arrow_up: Chore(Modules): Update modules version' && git push origin main"
+    "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy && hugo mod graph"
   },
   "repository": {
     "type": "git",
