--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,17 +15,17 @@ updates:
     labels:
       - "dependencies"
       - "actions"
-  # - package-ecosystem: "gomod" # See documentation for possible values
-    # directory: "/" # Location of package manifests
-    # schedule:
-      # interval: "weekly"
-    # open-pull-requests-limit: 1000
-    # assignees:
-      # - "attajak"
-    # labels:
-      # - "dependencies"
-      # - "components"
-      # - "modules"
+  - package-ecosystem: "gomod" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 1000
+    assignees:
+      - "attajak"
+    labels:
+      - "dependencies"
+      - "components"
+      - "modules"
   - package-ecosystem: "gitsubmodule"
     directory: "/"
     schedule:
