--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ _vendor/
 .hugo_build.lock
 jsconfig.json
 package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Firebase build and deployment files
 /firebase-debug.log
