--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -11,7 +11,7 @@ languageCode = "en"
 hasCJKLanguage = true
 enableRobotsTXT = false
 enableEmoji = true
-enableGitInfo = true
+enableGitInfo = false
 relativeURLs = false
 buildDrafts = false
 summaryLength = 150
