--- a/config/_default/permalinks.toml
+++ b/config/_default/permalinks.toml
@@ -3,6 +3,12 @@
 # See: https://gohugo.io/content-management/urls/#permalinks
 # -------------------------------------------------------------------------------------
 
-# posts = ":year/:month/:filename"
-# posts = "posts/:slugorfilename"
-posts = "posts/:slugorcontentbasename"
+[page]
+# posts = "/p/:slugorcontentbasename"
+
+[section]
+# posts = "/posts/:slugorcontentbasename"
+
+[taxonomy]
+
+[term]
