--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "clean": "rm -rf .hugo_build.log resource public _vendor",
     "build": "hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --logLevel info --bind 0.0.0.0 -b http://localhost",
-    "server:production": "npm run start -- --environment production",
-    "preupdate": "git submodule update --init --recursive && git submodule update --remote --merge",
-    "update": "hugo mod get -u ./... && hugo mod tidy",
+    "preview": "npm run start -- -e production",
+    "prepare": "git submodule update --init --recursive && git submodule update --remote --merge",
+    "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy",
     "list:mods": "hugo mod graph",
     "list": "hugo list all",
     "start": "npm run server"
