--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - main
     paths:
+      - '.github/workflows/deploy.yml'
       - 'assets/**'
       - 'config/**'
       - 'content/**'
