--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Update hugo modules
         run: |
-          hugo mod get -u
+          hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest
           hugo mod tidy
           hugo mod graph
 
@@ -49,5 +49,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v7
         with:
-          commit_message: ":arrow_up: Chore(Modules): Update modules"
+          commit_message: ":arrow_up: Chore(Modules): Update FixIt-bundle version"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
