--- a/.github/workflows/update-modules.yml
+++ b/.github/workflows/update-modules.yml
@@ -42,12 +42,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           comment_tag_name: HUGO_FIXIT_COMPONENTS
-          readme_path: 'README.md' # 'README.md,README.en.md'
+          readme_path: 'README.md'
           # exclude_repos: 'fixit-bundle'
           template: "- [{$repo.name}]({$repo.html_url})\\\n {$repo.description}"
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v7
         with:
-          commit_message: ":arrow_up: Chore(Modules): Update FixIt-bundle version"
+          commit_message: ":arrow_up: Chore(Modules): Update theme component version"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
