--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "main": "index.js",
   "scripts": {
     "create": "hugo new content",
-    "clean": "rm -rf .hugo_build.lock resources public _vendor",
+    "clean": "rm -rf .hugo_build.lock _vendor/ resources/ public/",
     "build": "hugo --gc --minify --logLevel info",
     "server": "hugo server -D -E -F -N -M -O --disableFastRender --ignoreCache --logLevel info --bind 0.0.0.0 -b http://localhost",
-    "server:prod": "npm run start -- -e production",
+    "preview": "npm run server -- -e production",
     "prepare": "git submodule update --init --recursive && git submodule update --remote --merge",
     "update": "hugo mod get -u github.com/hugo-fixit/fixit-bundle@latest && hugo mod tidy",
     "list:mods": "hugo mod graph",
-    "list": "hugo list all",
+    "list:content": "hugo list all",
     "start": "npm run server",
     "deploy": "firebase deploy"
   },
