--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,8 +16,10 @@ on:
       - 'layouts/**'
       - 'static/**'
       - 'themes/**'
-      - 'go.mod'
-      - 'go.sum'
+      - 'hugo.*'
+      - 'config.*'
+      - 'go.*'
+      - 'firebase.json'
   workflow_run:
     workflows: ['Update modules']
     types:
